--- a/frosthaven_assistant/pubspec.yaml
+++ b/frosthaven_assistant/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.8.7+33
+version: 1.9.0+1
 
 environment:
   sdk: ">=3.1.0 <3.4.0"
@@ -84,7 +84,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/icon.png"
+  image_path: "assets/images/icon512x512.png"
   windows:
     generate: true
     image_path: "assets/images/icon.png"
