remove save button from status menu

--- a/frosthaven_assistant/debian/gui/xhaven_assistant.desktop
+++ b/frosthaven_assistant/debian/gui/xhaven_assistant.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
-Name=X-Haven Assistant
-GenericName=X-Haven Assistant
+Name=X-Haven+
+GenericName=X-Haven+
 Comment=A Mega Cool App that does everything
 Terminal=false
 Type=Application
