--- a/frosthaven_assistant/macos/Runner/Info.plist
+++ b/frosthaven_assistant/macos/Runner/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>X-Haven Assistant</string>
+	<string>X-Haven+</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
