--- a/frosthaven_assistant/pubspec.yaml
+++ b/frosthaven_assistant/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.9.0+1
+version: 1.9.0+3
 
 environment:
   sdk: ">=3.1.0 <3.4.0"
@@ -91,8 +91,8 @@ flutter_icons:
     icon_size: 48
 
 flutter_native_splash:
-  background_image: "assets/images/bg/frosthaven-bg.png"
-  image: "assets/images/icon512x512.png"
+  color: "#dff4fd"
+  image: "assets/images/splash.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
