--- a/frosthaven_assistant/pubspec.yaml
+++ b/frosthaven_assistant/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.9.2+55
+version: 1.9.3+57
 
 environment:
   sdk: ">=3.1.0 <3.4.0"
@@ -62,6 +62,7 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
   format: ^1.4.0
+  flutter_displaymode: ^0.6.0
 
 
 
